<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingVertical="@dimen/static_spacing_large_extra">


        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="fill_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:contentDescription="@string/example_title"
            android:cropToPadding="false"
            android:src="@drawable/wolox_logo" />

        <EditText
            android:id="@+id/usernameInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large_extra"
            android:layout_marginRight="@dimen/spacing_large_extra"
            android:gravity="left"
            android:hint="@string/fragment_login_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/favouriteColorInput"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/logoImage"
            app:layout_constraintVertical_chainStyle="packed" />

        <EditText
            android:id="@+id/favouriteColorInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/spacing_large_extra"
            android:layout_marginTop="@dimen/spacing_large"
            android:layout_marginRight="@dimen/spacing_large_extra"
            android:gravity="left"
            android:hint="@string/fragment_login_password"
            android:inputType="textPassword"
            android:maxLines="1"
            app:layout_constraintBottom_toTopOf="@id/loginButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/usernameInput" />

        <Button
            android:id="@+id/loginButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_large"
            android:text="@string/fragment_button_login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/favouriteColorInput"
            app:layout_constraintStart_toStartOf="@id/favouriteColorInput"
            app:layout_constraintTop_toBottomOf="@id/favouriteColorInput" />

        <Button
            android:id="@+id/signupButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fragment_button_signup"
            android:backgroundTint="@color/colorPrimary"
            android:textColor="@color/colorAccent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/loginButton"
            app:layout_constraintStart_toStartOf="@id/loginButton"
            app:layout_constraintTop_toBottomOf="@id/loginButton"
            app:layout_constraintVertical_bias="0.073" />

        <TextView
            android:id="@+id/woloxPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="bottom|center_horizontal"
            android:text="@string/example_wolox_phone"
            android:textSize="@dimen/font_medium_extra"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>